objects/Key_Value_Pair__mdt.object
<CustomObject>
    <fields>
        <fullName>ToCCEmail__c</fullName>
        <label>ToCCEmail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToEmail__c</fullName>
        <label>ToEmail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Key Value Pair</label>
    <pluralLabel>Key Value Pair</pluralLabel>
</CustomObject>